--- a/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
@@ -1,50 +1,47 @@
-
 # A part of the DarwinCore-Archive, DwC-A, generator.
 # GitHub: https://github.com/sharkdata/darwincore
 
-additionalMetadata: 
-    metadata: 
+additionalMetadata:
+    metadata:
         gbif:
-            citation: 
-                Stockholm University, Gothenburg University, Umeå University, Linnaeus University, 
-                Swedish Agency for Marine and Water Management, Swedish Environmental Protection Agency and Swedish Meterological and Hydrological Institute (2020). 
-                National zoobenthos monitoring in Sweden since 1971.
+            citation:
+                Stockholm University, Gothenburg University, Umeå University, Linnaeus University,
+                Swedish Agency for Marine and Water Management, Swedish Environmental Protection Agency and Swedish Meterological and Hydrological Institute (2022).
+                SHARK - National marine environmental monitoring of Zoobenthos in in Sweden since 1971.
 
-dataset: 
-    title: SHARK - National zoobenthos monitoring in Sweden since 1971
+dataset:
+    title: SHARK - National marine environmental monitoring of Zoobenthos in in Sweden since 1971
 
-    abstract: 
-        para: 
-            -   Zoobenthos have been monitored in Sweden since 1971. The national monitoring program was initiated by the 
-                Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management. 
-            -   Monitoring is performed by Stockholm University, Gothenburg University, Umeå University and Linnaeus University. 
-            -   Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. 
-            -   'The purpose of the monitoring program is to detect long term and short term changes in the soft bottom macrozoobenthos (>1mm) communities. 
-                Changes in the macrofauna community can indicate changes in environmental threats like eutrophication, environmental toxins and climate change. '
-            -   'Data are collected and analyzed according to Leonardsson K., 2004. (In Swedish) Metodbeskrivning för provtagning och analys av 
-                mjukbottenlevande makroevertebrater i marin miljö. Umeå universitet, Institutionen för ekologi och geovetenskap, 26 p 
-                (https://www.havochvatten.se/download/18.1690613b166605675de898f4/1539942622449/rapport-umu-metodbeskrivning-provtagning-analys-mjukbottenlevande-makroevertebrater-i-marin-miljo.pdf) 
-                or similar methods. Information about the program and the methods are available in Swedish at 
-                https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/mjukbottenlevande-makrofauna-trend--och-omradesovervakning.html and https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/sediment---basundersokning.html'
+    abstract:
+        para:
+            - The national monitoring program was initiated by the
+              Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management.
+            - Monitoring is performed by Stockholm University, Gothenburg University, Umeå University and Linnaeus University.
+            - Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute.
+            - "The purpose of the monitoring program is to detect long term and short term changes in the soft bottom macrozoobenthos (>1mm) communities.
+              Changes in the macrofauna community can indicate changes in environmental threats like eutrophication, environmental toxins and climate change. "
+            - "Data are collected and analyzed according to Leonardsson K., 2004. (In Swedish) Metodbeskrivning för provtagning och analys av
+              mjukbottenlevande makroevertebrater i marin miljö. Umeå universitet, Institutionen för ekologi och geovetenskap, 26 p
+              (https://www.havochvatten.se/download/18.1690613b166605675de898f4/1539942622449/rapport-umu-metodbeskrivning-provtagning-analys-mjukbottenlevande-makroevertebrater-i-marin-miljo.pdf)
+              or similar methods. Information about the program and the methods are available in Swedish at
+              https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/mjukbottenlevande-makrofauna-trend--och-omradesovervakning.html and https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/sediment---basundersokning.html"
 
-    methods: 
-        methodStep: 
-            description: 
-                para:
-                    -   'Data are collected and analyzed according to Leonardsson K., 2004. 
-                        (In Swedish) Metodbeskrivning för provtagning och analys av mjukbottenlevande makroevertebrater i marin miljö. 
-                        Umeå universitet, Institutionen för ekologi och geovetenskap, 26 p 
-                        (https://www.havochvatten.se/download/18.1690613b166605675de898f4/1539942622449/rapport-umu-metodbeskrivning-provtagning-analys-mjukbottenlevande-makroevertebrater-i-marin-miljo.pdf) 
-                        or similar methods.'
-        sampling: 
+    methods:
+        methodStep:
             description:
-                Samples are taken with a boxcorer or grab.
+                para:
+                    - "Data are collected and analyzed according to Leonardsson K., 2004.
+                      (In Swedish) Metodbeskrivning för provtagning och analys av mjukbottenlevande makroevertebrater i marin miljö.
+                      Umeå universitet, Institutionen för ekologi och geovetenskap, 26 p
+                      (https://www.havochvatten.se/download/18.1690613b166605675de898f4/1539942622449/rapport-umu-metodbeskrivning-provtagning-analys-mjukbottenlevande-makroevertebrater-i-marin-miljo.pdf)
+                      or similar methods."
+        sampling:
+            description: Samples are taken with a boxcorer or grab.
 
-    coverage: 
-        geographicCoverage: 
-            geographicDescription: 
-                'Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379'
-        # taxonomicCoverage: 
+    coverage:
+        geographicCoverage:
+            geographicDescription: "Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379"
+        # taxonomicCoverage:
         #     - Phylum: Annelida
         #     - Phylum: Priapulida
         #     - Phylum: Mollusca
@@ -62,22 +59,8 @@ dataset:
         #     - Phylum: Bryozoa
         #     - Phylum: Xenacoelomorpha
 
-    keywordSet: 
-        keywords: 
-            keyword: 
+    keywordSet:
+        keywords:
+            keyword:
                 - Samplingevent
-        keywordThesaurus: 
-            'GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml'
-
-
-    creator: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
-        organizationName: 
-                        Swedish Meterological and Hydrological Institute
-
-    metadataProvider: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
+        keywordThesaurus: "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
