--- a/dwca_config/eml_metadata/eml_epibenthos_nat.yaml
+++ b/dwca_config/eml_metadata/eml_epibenthos_nat.yaml
@@ -11,15 +11,14 @@ additionalMetadata:
                 Linnaeus University, 
                 Swedish Agency for Marine and Water Management, 
                 Swedish Environmental Protection Agency and 
-                Swedish Meteorological and Hydrological Institute (2020). 
-                National Epibenthos monitoring in Sweden since 1992.
+                Swedish Meteorological and Hydrological Institute (2022). 
+                SHARK - National marine environmental monitoring of Epibenthos in Sweden since 1992
 
 dataset: 
-    title: SHARK - National Epibenthos monitoring in Sweden since 1992
+    title: SHARK - National marine environmental monitoring of Epibenthos in Sweden since 1992
 
     abstract: 
-        para: 
-            - Epibenthos has been nationally monitored in Sweden since 1992. 
+        para:  
             - The monitoring program was initiated by the Swedish Environmental Protection Agency 
               and later the Swedish Agency for Marine and Water Management took over the responsibility and financing of the program. 
             - The monitoring is performed by Stockholm University, University of Gothenburg and Linnaeus University. 
@@ -74,15 +73,3 @@ dataset:
                 - Samplingevent
         keywordThesaurus: 
             "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
-
-    creator: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
-        organizationName: 
-            Swedish Meteorological and Hydrological Institute
-
-    metadataProvider: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
