--- a/dwca_config/eml_metadata/eml_epibenthos_reg.yaml
+++ b/dwca_config/eml_metadata/eml_epibenthos_reg.yaml
@@ -9,15 +9,14 @@ additionalMetadata:
                 Swedish county administration boards, 
                 Swedish municipalities, 
                 Swedish coalitions of water conservation, 
-                Swedish Meteorological and Hydrological Institute et.al. (2020).
-                SHARK - Regional monitoring and monitoring projects of Epibenthos in Sweden since 1994.
+                Swedish Meteorological and Hydrological Institute et.al. (2022).
+                SHARK - Regional marine environmental monitoring and monitoring projects of Epibenthos in Sweden since 1994.
 
 dataset: 
-    title: SHARK - Regional monitoring and monitoring projects of Epibenthos in Sweden since 1994
+    title: SHARK - Regional marine environmental monitoring and monitoring projects of Epibenthos in Sweden since 1994
 
     abstract: 
         para: 
-            - Epibenthos has been regionally monitored in Sweden since 1994. 
             - The monitoring is financed by the Swedish county administration boards, 
               Swedish municipalities and Swedish coalitions of water conservation.
             - Recipient control data financed by companies are also included. The data is stored in the database SHARK, 
@@ -73,15 +72,3 @@ dataset:
                 - Samplingevent
         keywordThesaurus: 
             "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
-
-    creator: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
-        organizationName: 
-            Swedish Meteorological and Hydrological Institute
-
-    metadataProvider: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
