Obspoint for seal.

--- a/dwca_config/field_mapping/dwca_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_terms_emof.yaml
@@ -349,6 +349,13 @@ dwcaEmofContent:
                 measurementUnitID:
                 sourceKey: plankton_sampling_method_code
 
+            -   measurementType: Observation point
+                measurementTypeID: 
+                measurementUnit: 
+                measurementUnitID:
+                sourceKey: obspoint
+
+
     -   eventType: occurrence
         dwcTerms:
             eventID:
