coordinate_uncertainty_m for some seal data.

--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -126,7 +126,7 @@ dwcaEventContent:
             geodeticDatum:
                 text: EPSG:4619
             coordinateUncertaintyInMeters:
-                sourceKey: 
+                sourceKey: coordinate_uncertainty_m
             coordinatePrecision:
                 sourceKey: 
             license:
