Cell volume added in eMoF.

--- a/dwca_config/field_mapping/dwca_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_terms_emof.yaml
@@ -403,6 +403,11 @@ dwcaEmofContent:
                 measurementUnit: um
                 measurementUnitID:
                 sourceKey: size_max_um
+            -   measurementType: Cell volume
+                measurementTypeID: 
+                measurementUnit: um3
+                measurementUnitID:
+                sourceKey: reported_cell_volume_um3
             -   measurementType: Coefficient
                 measurementTypeID: 
                 measurementUnit: 
