--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -119,6 +119,8 @@ dwcaOccurrenceContent:
                         sourceKey: detached
                     -   dynamicKey: Recruits
                         sourceKey: recruits
+                    -   dynamicKey: SharkDataset
+                        sourceKey: dataset_name
                     #-   dynamicKey: Bitemark
                     #    sourceKey: bitemark
                     #-   dynamicKey: DegreeBiofouling
