--- a/dwca_config/eml_metadata/eml_bacterioplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_bacterioplankton_nat.yaml
@@ -1,29 +1,26 @@
-
 # A part of the DarwinCore-Archive, DwC-A, generator.
 # GitHub: https://github.com/sharkdata/darwincore
 
-additionalMetadata: 
-    metadata: 
+additionalMetadata:
+    metadata:
         gbif:
-            citation: 
-                Umeå University, 
-                Swedish Agency for Marine and Water Management, 
+            citation: Umeå University,
+                Swedish Agency for Marine and Water Management,
                 Swedish Environmental Protection Agency and
                 Swedish Meteorological and Hydrological Institute (2022). SHARK - National marine environmental monitoring of Bacterioplankton in Sweden since 1989
 
-dataset: 
+dataset:
     title: SHARK - National marine environmental monitoring of Bacterioplankton in Sweden since 1989
 
-    abstract: 
-        para: 
+    abstract:
+        para:
             - >
-                The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management.    
+                The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management.
             - >
                 Monitoring is performed by Umeå University. Data are stored in the Swedish Ocean Archive (SHARK) by the Swedish Meteorological and Hydrological Institute (SMHI).
             - >
                 Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C11 Guidelines concerning bacterioplankton growth determination (https://helcom.fi/media/documents/Manual-for-Marine-Monitoring-in-the-COMBINE-Programme-of-HELCOM_PartC_AnnexC11.pdf). However, deviations from the manual might occur. Information about the
                 program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/hav/vagledning--lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/bakteriell-syrekonsumtion.html
-    
 
     methods:
         methodStep:
@@ -31,23 +28,20 @@ dataset:
                 para: >
                     Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C11 Guidelines concerning bacterioplankton growth determination (https://helcom.fi/media/documents/Manual-for-Marine-Monitoring-in-the-COMBINE-Programme-of-HELCOM_PartC_AnnexC11.pdf). However, deviations from the manual might occur.
 
-        sampling: 
+        sampling:
             description:
-                '"It is recommended to take at least 2 samples at different representative depths of the monitored layers of the water column. 
-                Surface layer and deepest layer are prioritised. [...] A sampling frequency of 10 samples per year is required to get confident annual estimates (J. Wikner, unpubl. results). 
-                Samples should be distributed in the seasonal curve to provide a good coverage of different levels (more samples during the productive season)" 
-                (HELCOM COMBINE Manual https://helcom.fi/media/documents/Manual-for-Marine-Monitoring-in-the-COMBINE-Programme-of-HELCOM_PartC_AnnexC11.pdf).' 
+                '"It is recommended to take at least 2 samples at different representative depths of the monitored layers of the water column.
+                Surface layer and deepest layer are prioritised. [...] A sampling frequency of 10 samples per year is required to get confident annual estimates (J. Wikner, unpubl. results).
+                Samples should be distributed in the seasonal curve to provide a good coverage of different levels (more samples during the productive season)"
+                (HELCOM COMBINE Manual https://helcom.fi/media/documents/Manual-for-Marine-Monitoring-in-the-COMBINE-Programme-of-HELCOM_PartC_AnnexC11.pdf).'
 
-    coverage: 
-        geographicCoverage: 
-            geographicDescription: 
-                'Data are collected within the following marine ecoregion: http://marineregions.org/mrgid/2401'
+    coverage:
+        geographicCoverage:
+            geographicDescription: "Data are collected within the following marine ecoregion: http://marineregions.org/mrgid/2401"
         taxonomicCoverage: Bacteria
 
-    keywordSet: 
-        keywords: 
-            keyword: 
+    keywordSet:
+        keywords:
+            keyword:
                 - Samplingevent
-        keywordThesaurus: 
-            'GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml'
-
+        keywordThesaurus: "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
