--- a/dwca_config/dwca_harbourseal_nat.yaml
+++ b/dwca_config/dwca_harbourseal_nat.yaml
@@ -48,7 +48,8 @@ taxaWorms:
     directory:
         data_in/resources
     files:
-        - taxa_dyntaxa_to_worms.txt
+        # - taxa_dyntaxa_to_worms.txt
+        - taxa_worms.txt
 
 translate:
     directory:
