--- a/dwca_config/dwca_ringedseal_nat.yaml
+++ b/dwca_config/dwca_ringedseal_nat.yaml
@@ -38,7 +38,8 @@ fieldMapping:
 taxaWorms:
     directory: data_in/resources
     files:
-        - taxa_dyntaxa_to_worms.txt
+        # - taxa_dyntaxa_to_worms.txt
+        - taxa_worms.txt
 
 translate:
     directory: data_in/resources
