--- a/dwca_config/dwca_seal_pathology.yaml
+++ b/dwca_config/dwca_seal_pathology.yaml
@@ -47,7 +47,8 @@ taxaWorms:
     directory:
         data_in/resources
     files:
-        - taxa_dyntaxa_to_worms.txt
+        # - taxa_dyntaxa_to_worms.txt
+        - taxa_worms.txt
 
 translate:
     directory:
