--- a/dwca_config/dwca_zoobenthos_reg_recip_proj.yaml
+++ b/dwca_config/dwca_zoobenthos_reg_recip_proj.yaml
@@ -51,7 +51,8 @@ taxaWorms:
     directory:
         data_in/resources
     files:
-        - taxa_dyntaxa_to_worms.txt
+        # - taxa_dyntaxa_to_worms.txt
+        - taxa_worms.txt
 
 translate:
     directory:
