--- a/dwca_config/dwca_zooplankton_nat.yaml
+++ b/dwca_config/dwca_zooplankton_nat.yaml
@@ -49,7 +49,8 @@ taxaWorms:
     directory:
         data_in/resources
     files:
-        - taxa_dyntaxa_to_worms.txt
+        # - taxa_dyntaxa_to_worms.txt
+        - taxa_worms.txt
 
 translate:
     directory:
