occurrenceStatus: present/absent.

--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -72,7 +72,8 @@ dwcaOccurrenceContent:
             # organismQuantity:
             # organismQuantityType:
             occurrenceStatus:
-                text: present
+                # text: present
+                sourceKey: present_absent
             preparations:
                 dynamic: 
                     -   dynamicKey: PreservationMethodCode
